--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* connection error çöz !
 * componentleri düzenle (extract, stil, düzen...)
 * /fav sayfasını yap
 * her component bittiğinde build edip hataları onar
