added utils and edited others...

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
-* connection error çöz !
 * componentleri düzenle (extract, stil, düzen...)
-* /fav sayfasını yap
+* /fav için ayrı kisifav component yaz ve ona göre düzenle
 * her component bittiğinde build edip hataları onar
 * refactor code
 * D R Y !!!!
