--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
--> stil sorununu çöz !
+-> stil sorununu çöz ! /purgecss react-bootstrap ile çalışmıyormuş -> purgecss i sil
 -> move the CRUD layer to API routes / in pages/api/cms/kisiEkle
